# socialcli

./: .gitignore  AGENTS.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
plan/: dev-plan-v2.md  dev-plan-v3.md  dev-plan-v4.md  dev-plan-v5.md
src/socialcli/: __init__.py  main.py
src/socialcli/auth/: browser_login.py  cookie_store.py
src/socialcli/commands/: accounts.py  ai.py  batch.py  config.py  history.py  login.py  logout.py  monitor.py  publish.py  schedule.py  status.py  trending.py
src/socialcli/core/: ai_writer.py  batch.py  content_adapter.py  monitor.py  publisher.py  scheduler.py
src/socialcli/utils/: output.py
tests/: test_base_platform.py  test_batch.py  test_bilibili_smoke.py  test_cli.py  test_content_adapter.py  test_cookie_store.py  test_publisher.py  test_reddit_smoke.py  test_scheduler.py  test_twitter.py
