[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socialcli"
version = "0.1.0"
description = "Unified social media CLI — publish, search, trending, interact across all platforms"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["social-media", "cli", "automation", "douyin", "xiaohongshu", "twitter", "reddit"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
    "rich>=13.0",
    "playwright>=1.40",
]

[project.optional-dependencies]
ai = ["openai>=1.0"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.scripts]
social = "socialcli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
markers = [
    "flaky_network: tests that depend on external APIs and may fail due to rate limiting",
]
